# FlowBeast-Agent

./: .gitignore  README.md  create_project2.py  create_project_structure.py  start.sh  start_cody.sh
FlowBeast/: .gitignore  Dockerfile  docker-compose.yml  generated_workflow.py  main.py  pyproject.toml  requirements.txt  run.py  setup_docker_identity.sh  start_dev.sh  ultimate_verify.py
FlowBeast/archive/commercial_v1/: README.md
FlowBeast/deployments/docker/: docker-compose.yml
FlowBeast/deployments/scripts/: start_dev.sh  start_production.sh
FlowBeast/docs/: MVP_SHORT_DRAMA.md
FlowBeast/flowbeast/: config.py
FlowBeast/flowbeast/agent/: codegen.py  compiler.py
FlowBeast/flowbeast/api/: main.py
FlowBeast/flowbeast/codegen/: pandas_generator.py
FlowBeast/flowbeast/commercial/: billing.py  database.py
FlowBeast/flowbeast/compiler/: core.py
FlowBeast/flowbeast/core/: config.py
FlowBeast/flowbeast/data/: top_sales.parquet
FlowBeast/flowbeast/drama/: audio.py  generator.py  pipeline.py  prompt.py  schema.py
FlowBeast/tests/: conftest.py  test_codegen.py  test_compiler.py
FlowBeast/vs_code_extension/: tsconfig.json
datacody-agent/: .env.example  Dockerfile  generated_workflow.py  main.py  requirements.txt  run.py  start_dev.sh  start_production.sh  ultimate_verify.py  verify.py
datacody-agent/cody_agent/agent/: codegen.py  compiler.py
datacody-agent/cody_agent/api/: main.py
datacody-agent/cody_agent/api/middleware/: auth.py
datacody-agent/cody_agent/commercial/: billing.py
datacody-agent/cody_agent/compiler/: core.py
datacody-agent/cody_agent/data/: input.csv
datacody-agent/cody_agent/execution/: runner.py
datacody-agent/cody_agent/ir/: models.py
datacody-agent/deployments/docker/: docker-compose.yml  docker-compose.yml.bak
datacody-agent/market_material/docs/: api_reference.md
datacody-agent/market_material/pricing/: tiers.json
datacody-agent/test_data/: input.csv
datacody-agent/tests/: test_codegen.py  test_compiler.py
datacody-agent/vs_code_extension/: package.json
datacody-agent/vs_code_extension/src/: extension.ts
dev_logs/: Cody_Compiler_v2-my_bash_history_2025-11-08_0958.txt  cody_compiler_v2-my_bash_history_2025-11-08_1819.txt
