[project]
name = "flowbeast"
version = "0.2.0"
description = "FlowBeast: 高性能 AI 数据编排与智能体框架"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # --- 01 FOUNDATION & FEATURE (感知层) ---
    "pandas>=2.2.0",
    "pyarrow",                # 处理 Parquet 必选
    "numpy>=2.0.0",
    "python-dotenv>=1.0.0",
    "qdrant-client",          # 向量数据库 (比 Milvus 更轻量好上手)
    
    # --- 02 & 03 INFERENCE (推理与执行层) ---
    "openai>=1.0.0",          # 兼容 Qwen/DeepSeek/OpenAI
    "langgraph",              # 架构图中的多 Agent 编排核心
    "langchain-openai",       # 工具调用集成
    
    # --- 04 & 05 OBSERVABILITY (观测与反馈) ---
    "structlog",              # 结构化日志
    "loguru",                 # 极致易用的日志辅助
    "ragas",                  # RAG 效果评估基准
    
    # --- INFRASTRUCTURE (基础设施) ---
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "sqlmodel",               # 结合了 SQLAlchemy 和 Pydantic 的数据库利器
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "black",                  # 代码格式化
    "ipython",                # 交互式调试
]

[tool.uv]
# 确保 uv 同步时更加严格
managed = true
